# pythoneer

./: LICENSE  README.md  django_views.py  pyproject.toml
class/: README.md  main.py
pythonic_code/: sorted_dictionary.py  string_concatenation.py
