[tool.poetry]
name = "pythoneer"
version = "0.1.0"
description = "study concepts about python"
authors = ["Hand Medeiros"]

[tool.poetry.dependencies]
python = "^3.8"
pip = "^21.0.1"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
